# supercompact

./: .gitignore  README.md  compact.py  docker-compose.yml  eval_v2_all_results.json  eval_v2_claude_baseline.json  eval_v2_eitf_160000.json  eval_v2_eitf_200000.json  eval_v2_eitf_40000.json  eval_v2_eitf_60000.json  llm_eval_merged.json  llm_eval_results.json  llm_eval_results_8k.json  merge_results.py  pareto.py  pareto_fixed.py  pareto_v2.py  pyproject.toml  test_conversation.jsonl
.claude/commands/: supercompact.md
lib/: dedup.py  eitf.py  fitness.py  formatter.py  llama_embed.py  llama_rerank.py  llm_compact.py  pareto.py  parser.py  scorer.py  scorer_base.py  selector.py  setcover.py  tokenizer.py  types.py
lib/eval/: __init__.py  aggregate.py  cache.py  entity_coverage.py  evidence_coverage.py  judge.py  probes.py  report.py
plugins/claude-code/: README.md  install.sh  uninstall.sh
plugins/claude-code/commands/: supercompact.md
plugins/claude-code/hooks-handlers/: supercompact-precompact.sh
plugins/claude-code/scripts/: compact-session.sh  patch-compaction.sh  patcher.py
plugins/codex-cli/: README.md  codex-compact  codex-compact-watch  codex_parser.py  compact-prompt.md  compact_codex.py  install.sh  test_codex_parser.py  uninstall.sh
results/: claude_code_result.json  claude_code_summary.txt  eval_v2_eitf_120000.json  eval_v2_eitf_80000.json  pareto_dual.py  pareto_fixed_results.json  pareto_results.json  pareto_v2.py
