[project]
name = "compact-poc"
version = "0.1.0"
description = "Reranker-based conversation compaction for Claude Code JSONL histories"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "httpx>=0.27",
    "numpy>=1.26",
    "matplotlib>=3.10.8",
    "transformers>=5.0.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
    "transformers>=4.51.0",
]
